--- a/ostd/Cargo.toml
+++ b/ostd/Cargo.toml
@@ -38,6 +38,7 @@ ostd-test = { path = "libs/ostd-test", version = "0.9.2" }
 owo-colors = { version = "3", optional = true }
 ostd-pod = { git = "https://github.com/asterinas/ostd-pod", rev = "c4644be", version = "0.1.1" }
 spin = "0.9.4"
+smallvec = "1.13.2"
 static_assertions = "1.1.0"
 unwinding = { version = "0.2.3", default-features = false, features = ["fde-gnu-eh-frame-hdr", "hide-trace", "panic", "personality", "unwinder"] }
 volatile = { version = "0.4.5", features = ["unstable"] }
