--- a/osdk/src/base_crate/main.rs.template
+++ b/osdk/src/base_crate/main.rs.template
@@ -6,7 +6,7 @@ extern crate #TARGET_NAME#;
 #[panic_handler]
 fn panic(info: &core::panic::PanicInfo) -> ! {
     extern "Rust" {
-        pub fn __aster_panic_handler(info: &core::panic::PanicInfo) -> !;
+        pub fn __ostd_panic_handler(info: &core::panic::PanicInfo) -> !;
     }
-    unsafe { __aster_panic_handler(info); }
+    unsafe { __ostd_panic_handler(info); }
 }
