--- a/ostd/libs/linux-bzimage/setup/Cargo.toml
+++ b/ostd/libs/linux-bzimage/setup/Cargo.toml
@@ -18,14 +18,14 @@ core2 = { version = "0.4.0", default-features = false, features = ["nightly"] }
 libflate = { version = "2.1.0", default-features = false }
 linux-boot-params = { path = "../boot-params", version = "0.1.0" }
 uart_16550 = "0.3.0"
-xmas-elf = "0.8.0"
+xmas-elf = "0.9.1"
 
 [target.x86_64-unknown-none.dependencies]
 bitflags = "2.4.1"
 log = "0.4.20"
-uefi = "0.26.0"
-uefi-services = "0.23.0"
-x86_64 = "0.14.11"
+uefi = { version = "0.32.0", features = ["global_allocator", "panic_handler", "logger", "qemu"]}
+uefi-raw = "0.8.0"
+x86_64 = "0.15.1"
 
 [features]
 default = []
