--- a/ostd/Cargo.toml
+++ b/ostd/Cargo.toml
@@ -28,7 +28,7 @@ inherit-methods-macro = { git = "https://github.com/asterinas/inherit-methods-ma
 int-to-c-enum = { path = "../kernel/libs/int-to-c-enum", version = "0.1.0" }
 intrusive-collections = { version = "0.9.6", features = ["nightly"] }
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
-linux-boot-params = { path = "libs/linux-bzimage/boot-params", version = "0.1.0" }
+linux-boot-params = { version = "0.1.0", path = "libs/linux-bzimage/boot-params" }
 log = "0.4"
 num = { version = "0.4", default-features = false }
 num-derive = { version = "0.4", default-features = false }
