--- a/ostd/libs/linux-bzimage/setup/Cargo.toml
+++ b/ostd/libs/linux-bzimage/setup/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/main.rs"
 cfg-if = "1.0.0"
 core2 = { version = "0.4.0", default-features = false, features = ["nightly"] }
 libflate = { version = "2.1.0", default-features = false }
-linux-boot-params = { path = "../boot-params", version = "0.1.0" }
+linux-boot-params = { version = "0.1.0", path = "../boot-params" }
 uart_16550 = "0.3.0"
 xmas-elf = "0.9.1"
 
