--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,6 +12,7 @@ aster-block = { path = "comps/block" }
 aster-network = { path = "comps/network" }
 aster-console = { path = "comps/console" }
 aster-framebuffer = { path = "comps/framebuffer" }
+aster-softirq = { path = "comps/softirq" }
 aster-time = { path = "comps/time" }
 aster-virtio = { path = "comps/virtio" }
 aster-rights = { path = "libs/aster-rights" }
