--- a/triagebot.toml
+++ b/triagebot.toml
@@ -29,3 +29,16 @@ cc = ["@grief8"]
 # @boterinas blocked - This indicates that a PR is blocked on something. 
 # @boterinas ready - This indicates that a PR is ready for review. 
 # @boterinas review or @boterinas reviewer are aliases for ready.
+
+# This feature will automatically adjust the labels on a pull request when a reviewer sends a review with changes requested.
+[review-submitted]
+# This label is added when clicking the “Request Changes” option.
+reviewed_label = "S-waiting-on-author"
+# These labels are removed when clicking the “Request Changes” option. 
+review_labels = ["S-waiting-on-review"]
+
+[review-requested]
+# Those labels are removed when PR author requests a review from an assignee.
+remove_labels = ["S-waiting-on-author"]
+# Those labels are added when PR author requests a review from an assignee.
+add_labels = ["S-waiting-on-review"]
