Support other SigStackFlags

--- a/test/syscall_test/Makefile
+++ b/test/syscall_test/Makefile
@@ -40,6 +40,7 @@ TESTS ?= \
 	rename_test \
 	semaphore_test \
 	sendfile_test \
+	sigaltstack_test \
 	stat_test \
 	stat_times_test \
 	statfs_test \
