Inject the logger for Asterinas

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "kernel/comps/input",
     "kernel/comps/network",
     "kernel/comps/softirq",
+    "kernel/comps/logger",
     "kernel/comps/time",
     "kernel/comps/virtio",
     "kernel/libs/cpio-decoder",
