--- a/kernel/comps/framebuffer/Cargo.toml
+++ b/kernel/comps/framebuffer/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 ostd = { path = "../../../ostd" }
 component = { path = "../../libs/comp-sys/component" }
+aster-logger = { path = "../logger" }
 log = "0.4"
 spin = "0.9.4"
 font8x8 = { version = "0.2.5", default-features = false, features = [
