--- a/kernel/comps/logger/Cargo.toml
+++ b/kernel/comps/logger/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
-name = "aster-time"
+name = "aster-logger"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ostd = { path = "../../../ostd" }
-aster-util = { path = "../../libs/aster-util" }
 component = { path = "../../libs/comp-sys/component" }
-aster-logger = { path = "../logger" }
+aster-console = { path = "../console" }
 log = "0.4"
+ostd = { path = "../../../ostd" }
 spin = "0.9.4"
-
-[target.riscv64gc-unknown-none-elf.dependencies]
-chrono = { version = "0.4.38", default-features = false }
+owo-colors = { version = "3", optional = true }
+cfg-if = "1.0"
 
 [features]
+default = ["log_color"]
+log_color = ["dep:owo-colors"]
