--- a/kernel/comps/softirq/Cargo.toml
+++ b/kernel/comps/softirq/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 ostd = { path = "../../../ostd" }
 component = { path = "../../libs/comp-sys/component" }
+aster-logger = { path = "../logger" }
 intrusive-collections = "0.9.5"
 spin = "0.9.4"
 
