Avoid inline comments in variable assignments in Makefile

--- a/test/apps/Makefile
+++ b/test/apps/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: MPL-2.0
 
-MAKEFLAGS += --no-builtin-rules # Prevent the implicit rules from compiling ".c" or ".s" files automatically.
+# Prevent the implicit rules from compiling ".c" or ".s" files automatically.
+MAKEFLAGS += --no-builtin-rules
 
 MKFILE_PATH := $(abspath $(lastword $(MAKEFILE_LIST)))
 CUR_DIR := $(patsubst %/,%,$(dir $(MKFILE_PATH)))
