--- a/.github/workflows/benchmark_asterinas.yml
+++ b/.github/workflows/benchmark_asterinas.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        benchmark: 
+        benchmarks: 
           - sysbench/cpu_lat
           - sysbench/thread_lat
           # Memory-related benchmarks
@@ -90,68 +90,102 @@ jobs:
       RUSTUP_UPDATE_ROOT: https://mirrors.ustc.edu.cn/rust-static/rustup
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up the environment
-      run: |
-        chmod +x test/benchmark/bench_linux_and_aster.sh
-        # Set up git due to the network issue on the self-hosted runner
-        git config --global --add safe.directory /__w/asterinas/asterinas
-        git config --global http.sslVerify false
-        git config --global http.version HTTP/1.1
+      - uses: actions/checkout@v4
+      - name: Set up the environment
+        run: |
+          chmod +x test/benchmark/bench_linux_and_aster.sh
+          # Set up git due to the network issue on the self-hosted runner
+          git config --global --add safe.directory /__w/asterinas/asterinas
+          git config --global http.sslVerify false
+          git config --global http.version HTTP/1.1
 
-    - name: Run benchmark
-      uses: nick-invision/retry@v2 # Retry the benchmark command in case of failure
-      with:
-        timeout_minutes: 20
-        max_attempts: 3
-        command: |
-          make install_osdk
-          BENCHMARK_TYPE=$(jq -r '.benchmark_type' test/benchmark/${{ matrix.benchmark }}/config.json)
-          ASTER_SCHEME=$(jq -r '.aster_scheme' test/benchmark/${{ matrix.benchmark }}/config.json)
-          bash test/benchmark/bench_linux_and_aster.sh ${{ matrix.benchmark }} $BENCHMARK_TYPE $ASTER_SCHEME
+      - name: Run benchmarks
+        uses: nick-invision/retry@v3 # Retry the benchmark command in case of failure
+        with:
+          timeout_minutes: 20
+          max_attempts: 3
+          command: |
+            make install_osdk
+            bash test/benchmark/bench_linux_and_aster.sh "${{ matrix.benchmarks }}"
+            BENCHMARK_ARTIFACT=results_$(echo "${{ matrix.benchmarks }}" | tr '/' '-')
+            echo "BENCHMARK_ARTIFACT=$BENCHMARK_ARTIFACT" >> $GITHUB_ENV
 
-    - name: Set up benchmark configuration
-      run: |
-        ALERT_THRESHOLD=$(jq -r '.alert_threshold' test/benchmark/${{ matrix.benchmark }}/config.json)
-        ALERT_TOOL=$(jq -r '.alert_tool' test/benchmark/${{ matrix.benchmark }}/config.json)
-        TITLE=$(jq -r '.title' test/benchmark/${{ matrix.benchmark }}/config.json)
-        DESCRIPTION=$(jq -r '.description' test/benchmark/${{ matrix.benchmark }}/config.json)
+      - name: Store benchmark results
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.BENCHMARK_ARTIFACT }}
+          path: |
+            result_*.json
 
-        if [ "$ALERT_THRESHOLD" = "null" ]; then
-          ALERT_THRESHOLD="130%"
-        fi
-        if [ "$ALERT_TOOL" = "null" ]; then
-          ALERT_TOOL="customSmallerIsBetter"
-        fi
-        if [ "$TITLE" = "null" ]; then
-          TITLE="${{ matrix.benchmark }}"
-        fi
+  Matrix:
+    runs-on: ubuntu-latest
+    needs: Benchmarks # Must run after the Benchmarks job.
+    if: always() # Always run regardless of whether the previous job was successful or not.
+    outputs:
+      benchmarks: ${{ steps.set-matrix.outputs.benchmarks }}
+    steps:
+      - name: Download results
+        uses: actions/download-artifact@v4
+        with:
+          pattern: results_*
+          path: ./results
+          merge-multiple: true
 
-        echo "ALERT_THRESHOLD=$ALERT_THRESHOLD" >> $GITHUB_ENV
-        echo "ALERT_TOOL=$ALERT_TOOL" >> $GITHUB_ENV
-        echo "TITLE=$TITLE" >> $GITHUB_ENV
-        echo "DESCRIPTION=$DESCRIPTION" >> $GITHUB_ENV
+      - name: Set matrix for benchmark results
+        id: set-matrix
+        run: |
+          benchmarks=$(ls results/result_*.json | sed 's/.*result_//' | sed 's/\.json//' | jq -R -s -c 'split("\n")[:-1]')
+          echo benchmarks=$benchmarks >> $GITHUB_OUTPUT
 
-        BENCHMARK_NAME=$(basename "${{ matrix.benchmark }}")
-        echo "BENCHMARK_NAME=$BENCHMARK_NAME" >> $GITHUB_ENV
-        BENCHMARK_STORE_DIR=$(dirname "${{ matrix.benchmark }}")
-        echo "BENCHMARK_STORE_DIR=$BENCHMARK_STORE_DIR" >> $GITHUB_ENV
-        BENCHMARK_SUMMARY=test/benchmark/${BENCHMARK_STORE_DIR}/summary.json
-        echo "BENCHMARK_SUMMARY=$BENCHMARK_SUMMARY" >> $GITHUB_ENV
+  Results:
+    runs-on: ubuntu-latest
+    needs: Matrix
+    strategy:
+      matrix:
+        benchmark: ${{ fromJson(needs.Matrix.outputs.benchmarks) }}
+      max-parallel: 1
+      fail-fast: false
 
-    - name: Store benchmark results
-      uses: asterinas/github-action-benchmark@v4
-      with:
-        name: ${{ env.BENCHMARK_NAME }}
-        tool: ${{ env.ALERT_TOOL }}
-        output-file-path: result_${{ env.BENCHMARK_NAME }}.json
-        benchmark-data-dir-path: ${{ env.BENCHMARK_STORE_DIR }}
-        github-token: ${{ secrets.BENCHMARK_SECRET }}
-        gh-repository: 'github.com/asterinas/benchmark'
-        auto-push: true
-        alert-threshold: ${{ env.ALERT_THRESHOLD }} 
-        comment-on-alert: true
-        fail-on-alert: true
-        chart-title: ${{ env.TITLE }}
-        chart-description: ${{ env.DESCRIPTION }}
-        summary-json-path: ${{ env.BENCHMARK_SUMMARY }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download Benchmark Results
+        uses: actions/download-artifact@v4
+        with:
+          pattern: results_*
+          path: ./results
+          merge-multiple: true
+
+      - name: Set up benchmark configuration
+        run: |
+          BENCHMARK_DIR=$(echo ${{ matrix.benchmark }} | sed 's/-/\//g')
+          BENCHMARK_SUITE=$(echo $BENCHMARK_DIR | awk -F'/' '{print $1}')
+          BENCHMARK_NAME=$(basename "$BENCHMARK_DIR")
+          BENCH_RESULT="test/benchmark/${BENCHMARK_DIR}/bench_result.json"
+          [ -f "$BENCH_RESULT" ] || BENCH_RESULT="test/benchmark/${BENCHMARK_DIR}.json"
+          ALERT_THRESHOLD=$(jq -r '.alert.threshold // "130%"' "$BENCH_RESULT")
+          ALERT_TOOL=$(jq -r 'if .alert.bigger_is_better == true then "customBiggerIsBetter" else "customSmallerIsBetter" end' "$BENCH_RESULT")
+          TITLE=$(jq -r '.chart.title // "Undefined"' "$BENCH_RESULT")
+          DESCRIPTION=$(jq -r '.chart.description // "No description provided"' "$BENCH_RESULT")
+          echo "BENCHMARK_SUITE=$BENCHMARK_SUITE" >> $GITHUB_ENV
+          echo "BENCHMARK_NAME=$BENCHMARK_NAME" >> $GITHUB_ENV
+          echo "ALERT_THRESHOLD=$ALERT_THRESHOLD" >> $GITHUB_ENV
+          echo "ALERT_TOOL=$ALERT_TOOL" >> $GITHUB_ENV
+          echo "TITLE=$TITLE" >> $GITHUB_ENV
+          echo "DESCRIPTION=$DESCRIPTION" >> $GITHUB_ENV
+
+      - name: Store benchmark results
+        uses: asterinas/github-action-benchmark@v4
+        with:
+          name: ${{ env.BENCHMARK_NAME }}
+          tool: ${{ env.ALERT_TOOL }}
+          output-file-path: results/result_${{ matrix.benchmark }}.json
+          benchmark-data-dir-path: ${{ env.BENCHMARK_SUITE }}
+          github-token: ${{ secrets.BENCHMARK_SECRET }}
+          gh-repository: 'github.com/asterinas/benchmark'
+          auto-push: true
+          alert-threshold: ${{ env.ALERT_THRESHOLD }}
+          comment-on-alert: true
+          fail-on-alert: true
+          chart-title: ${{ env.TITLE }}
+          chart-description: ${{ env.DESCRIPTION }}
+          summary-json-path: test/benchmark/${{ env.BENCHMARK_SUITE }}/summary.json
