--- a/.github/workflows/benchmark_asterinas.yml
+++ b/.github/workflows/benchmark_asterinas.yml
@@ -80,6 +80,7 @@ jobs:
           - redis/set_100k_conc20_rps
           # SQLite benchmarks
           - sqlite/ext2_benchmarks
+          - sqlite/ramfs_benchmarks
       fail-fast: false
     timeout-minutes: 60
     container: 
